future release

release 1.0
	* first fully operational version