@@ -32,7 +32,7 @@ void PrintUsage()
 	printf("USAGE: ElegentTDistributionSampler [option] [option] ...\n");
 	printf("OPTIONS:\n");
 	printf("\t-h\t\t\tprint this help and exit\n");
-	printf("\t-energy <E>\t\tset incident proton energy (i.e. half of sqrt(s)), in GeV\n");
+	printf("\t-energy <W>\t\tset collision energy (i.e. sqrt(s)), in GeV\n");
 	printf("\t-pp\t\t\tselect proton-proton interactions\n");
 	printf("\t-app\t\t\tselect antiproton-proton interactions\n");
 	printf("\t-models <string>\tcomma-separated list of model tags\n");
@@ -295,7 +295,7 @@ void WriteGraphs(const vector<Model *> &models, const AmplitudeGraph &amplitude_
 int main(int argc, char **argv)
 {
 	// defaults
-	double energy = 0.;
+	double W = 0.;
 	Constants::ParticleMode pMode = Constants::mPP;
 
 	unsigned int model_N = 10001, fullRange_N = 5001, lowt_N = 501;
@@ -317,7 +317,7 @@ int main(int argc, char **argv)
 		if (strcmp(argv[i], "-energy") == 0)
 		{
 			if (argc-1 > i)
-				energy = atof(argv[++i]);
+				W = atof(argv[++i]);
 			continue;
 		}
 
@@ -397,9 +397,9 @@ int main(int argc, char **argv)
 
 	// test input
 	bool stop = false;
-	if (energy == 0.)
+	if (W == 0.)
 	{
-		printf("ERROR: energy not specified.\n");
+		printf("ERROR: collision energy not specified.\n");
 		stop = true;
 	}
 
@@ -417,7 +417,7 @@ int main(int argc, char **argv)
 
 	// print input
 	printf(">> ElegentTDistributionSampler > input:\n");
-	printf("\tenergy = %E\n", energy);
+	printf("\tsqrt(s) = %E\n", W);
 	printf("\tparticle mode %u\n", pMode);
 
 	printf("\tmodel sampling: samples = %u, t_max = %.2E\n", model_N, model_t_max);
@@ -428,7 +428,7 @@ int main(int argc, char **argv)
 	printf("\toutput = %s\n", outputFileName.c_str());
 
 	// initialise constants etc.
-	Constants::Init(2.*energy, pMode);
+	Constants::Init(W, pMode);
 	cnts->Print();
 	coulomb->Print();
 
@@ -451,7 +451,7 @@ int main(int argc, char **argv)
 	// a trick to save E, since of->WriteObject(&E, "cmsEnergy") doesn't work
 	TGraph *data = new TGraph();
 	data->SetName("data");
-	data->SetPoint(0, 0., energy);
+	data->SetPoint(0, 0., W/2.);
 	data->Write();
 
 	// sample the models
